# Programming

./: .gitignore  .gitmodules  CX-Reset.sh
AP-Comp-Codes/: README.md  area.py
AP-Comp-Codes/01182023 GUI with Python/: NeuralNineTutorial.py  main.py  multifactorgui.py  rainbow.py
AP-Comp-Codes/01252023 HighFiveClub/: accounts.json  authenticator.py  classes.py  config.py  main.py
AP-Comp-Codes/05252023 RPS/: TL3Pattern.py  TLPossibilities.py  main.py  psrock.py  replit_zip_error_log.txt  team1.py  teamLogan.py  teamLogan2.py
BrainFuck/: ASCII_To_Brainfuck.py  BrainFuckVisualization.py  dbfi.txt
Jesse StdDevCalc/: jesse.html  jesse.py
OLD/: 5x7_digit_module.py  Actual Calculator.py  BugInARug2.py  BugInARug3.py  Class vs Instance Variables.py  ClassChooseTEst.py  Classes and objects.py  Commands.txt  Dad's Day.py  FIGHT.py  For test.py  Human.py  Inheritance.py  MomDemo.py  Multiple Inheritance.py  NOTES.txt  NovaGame.py  PrintAnswerSection  PrintMultipleLinesTest.py  ProgramProgram.py  RandomPassGenerator.py  Snake....py  String test.py  TKINTER.py  Test 1.py  TheGrowingSquare.py  TheMostUselessCalendar.py  Threading from Youtube.py  TicTacToe.py  TimerThatNeverStops.py  Tk Img.py  UnitConversionBeta1.py  UnitConversionBeta2.py  UnitConversionBeta3.py  UnitConversionBeta4.py  UserTurtleTutorial.py  War1.0.py  WebCrawler.py  Window 1.py  Window 2.py  (+30 more)
OLD/car/: calls.py  (+2 more)
Python/: collision.py  mc_chickens.py  solveTriangle.py
RustPrograms/clinews/newsapi/: Cargo.toml
RustPrograms/clinews/newsapi/src/: lib.rs
TI-85 custom programs/: RSTGRPH.txt  TABLE.txt
(+574 files in other folders)
