[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.208", features = ["derive"]}
serde_json = "1.0.125"
ureq = { version = "2.10.1", features = ["json"]}
thiserror = "1.0.63"
url = "2.5.2"
reqwest = {version = "0.12.7", features = ["json"], optional = true }

[features]
async = [
    "reqwest"
]